<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lyt_footer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/two">

    <LinearLayout
        android:id="@+id/lay_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/grey_3"
        android:orientation="vertical"
        android:padding="@dimen/five">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_conceptplanning"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:textColor="@color/grey_80"
            android:textSize="@dimen/ts_fifteen"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_planner"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:textColor="@color/grey_80"
            android:textSize="@dimen/ts_forteen" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five"
            android:text="@string/menu_developedby"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:textColor="@color/grey_80"
            android:textSize="@dimen/ts_fifteen"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_developer"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:textColor="@color/grey_80"
            android:textSize="@dimen/ts_forteen" />
    </LinearLayout>
</LinearLayout>