<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lay_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbarheight"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/five"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/five"
            android:src="@mipmap/ico_left" />

        <View
            android:id="@+id/img_view3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/five"
            android:layout_marginTop="@dimen/five"
            android:layout_marginBottom="@dimen/five"
            android:background="#ffffff" />

        <TextView
            android:id="@+id/heading"
            style="@style/textviewstyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="@dimen/ten"
            android:text="@string/head_approvealert"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_twenty"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/ten"
        android:visibility="visible"
        android:scrollbars="vertical"
        android:scrollingCache="true" />

    <TextView
        android:id="@+id/txt_nodata"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"
        android:textSize="@dimen/twentyfive"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/ten"
        android:text="@string/error_nodata" />

</LinearLayout>

