<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mylayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="@dimen/thirty">

        <TextView
            android:id="@+id/text_splashname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/twenty"
            android:gravity="center"
            android:shadowDx="1"
            android:visibility="invisible"
            android:shadowDy="1"
            android:text="@string/app_name"
            android:textColor="@color/fontcolordark"
            android:textSize="45sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/splash_logo" />

        <TextView
            android:id="@+id/splash_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/three"
            android:gravity="center"
            android:visibility="invisible"
            android:shadowDx="1"
            android:singleLine="true"
            android:shadowDy="1"
            android:text="pre contact tracing"
            android:textColor="#B9D3E0"
            android:textSize="@dimen/ts_twentyfive"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_txt_promotedby"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five"
            android:text="@string/label_promotedby"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
