<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mylayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lay_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbarheight"
        android:background="@color/colortheme"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/five"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/ten"
            android:src="@mipmap/ico_left"/>

        <View
            android:id="@+id/img_view3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/five"
            android:layout_marginLeft="@dimen/five"
            android:layout_marginTop="@dimen/five"
            android:background="#ffffff" />

        <TextView
            android:id="@+id/heading"
            style="@style/textviewstyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="@dimen/ten"
            android:text="Forgot Password"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_twenty"
            android:textStyle="bold" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/lay_uploadimage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000"
        android:orientation="horizontal"
        android:padding="@dimen/ten"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/lay_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/cardview_back"
            android:orientation="vertical">

            <Button
                android:id="@+id/dialog_fromgallery"
                style="@style/buttonstyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fortyfive"
                android:background="@drawable/topcardback"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/upload_dialoggallery"
                android:textColor="@color/colortheme" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colortheme" />

            <Button
                android:id="@+id/dialog_fromcamera"
                style="@style/buttonstyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fortyfive"
                android:background="@drawable/middlecardback"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/upload_dialogcapture"
                android:textColor="@color/colortheme" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colortheme" />

            <Button
                android:id="@+id/dialog_cancel"
                style="@style/buttonstyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fortyfive"
                android:background="@drawable/bottomcardback"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/upload_dialogcancel"
                android:textColor="@color/colortheme" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>