<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lay_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbarheight"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/five"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/five"
            android:src="@mipmap/ico_left" />

        <View
            android:id="@+id/img_view3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/five"
            android:layout_marginTop="@dimen/five"
            android:layout_marginBottom="@dimen/five"
            android:background="#ffffff" />

        <TextView
            android:id="@+id/heading"
            style="@style/textviewstyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="@dimen/ten"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_twenty"
            android:textStyle="bold" />
    </LinearLayout>

    <ir.apend.slider.ui.Slider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/onetwentyfive"
        app:animateIndicators="true"
        app:defaultIndicators="circle"
        app:indicatorSize="4dp"
        app:intervalSecond="4"
        app:loopSlides="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbarheight"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            style="@style/textviewstyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:padding="@dimen/ten"
            android:text="@string/head_travel_history"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_twenty"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/et_date"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editextheight"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/two"
        android:background="@drawable/edittextstyle"
        android:gravity="center"
        android:hint="@string/history_selectdate"
        android:padding="3dp"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/et_showall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/five"
        android:gravity="right"
        android:hint="@string/history_showallhistory"
        android:padding="5dp"
        android:textColor="@color/red_A400" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/ten"
        android:scrollbars="vertical"
        android:scrollingCache="true"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txt_nodata"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/ten"
        android:gravity="center"
        android:padding="@dimen/ts_twenty"
        android:text="No data"
        android:textSize="@dimen/twentyfive"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>

