<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mylayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lay_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbarheight"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/five"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/ten"
                android:singleLine="true"
                android:src="@mipmap/ico_left"
                android:text="Help/Support" />

            <View
                android:id="@+id/img_view3"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/five"
                android:layout_marginTop="@dimen/five"
                android:layout_marginBottom="@dimen/five"
                android:background="#ffffff" />

            <TextView
                android:id="@+id/heading"
                style="@style/textviewstyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="@dimen/ten"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_twenty"
                android:textStyle="bold" />
        </LinearLayout>

        <ir.apend.slider.ui.Slider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/onetwentyfive"
            app:animateIndicators="true"
            app:defaultIndicators="circle"
            app:indicatorSize="4dp"
            app:intervalSecond="4"
            app:loopSlides="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbarheight"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                style="@style/textviewstyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="@dimen/ten"
                android:text="@string/about_txt_head"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_twenty"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_aboutus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten"
            android:padding="@dimen/ten"
            android:text="@string/about_txt_about"
            android:textColor="@color/black"
            android:textSize="@dimen/ts_fifteen" />
    </LinearLayout>
</ScrollView>
